--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -23,6 +23,7 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">All Scheduled Blends</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_1">Desk 1</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_2">Desk 2</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=LET_Desk">LET Desk</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Hx">Horix</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Dm">Drums</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Totes">Totes</a></li>
