--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -7,6 +7,9 @@
         <a href="#desk2Container" class="nav-link" data-bs-toggle="tab">Desk 2</a>
     </li>
     <li class="nav-item">
+        <a href="#LETDeskContainer" class="nav-link" data-bs-toggle="tab">LET Desk</a>
+    </li>
+    <li class="nav-item">
         <a href="#horixContainer" class="nav-link" data-bs-toggle="tab">Horix</a>
     </li>
     <li class="nav-item">
@@ -24,6 +27,10 @@
     <div class="tab-pane fade show" id="desk2Container">
         <br><a href="/core/blend-schedule?blend-area=Desk_2">View Desk 2 Schedule</a>
         {% include 'core/blendschedules/desktwoschedule.html' %}
+    </div>
+    <div class="tab-pane fade show" id="LETDeskContainer">
+        <br><a href="/core/blend-schedule?blend-area=Desk_2">View Desk 2 Schedule</a>
+        {% include 'core/blendschedules/LETdeskschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="horixContainer">
         <br><a href="/core/blend-schedule?blend-area=Hx">View Horix Schedule</a>
