--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -11,17 +11,9 @@
         <h1>Lot Numbers</h1>
         <div id="topButtonContainer" class='text-center'>
             {% if user.is_staff %}
-                {% if not edit_yes_no or edit_yes_no == 'no' %}
-                    <button id="addLotNumButton" class="btn btn-primary topButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal">
-                        Add New Lot
-                    </button>
-                {% elif edit_yes_no == 'yes' %}
-                    <a href="/core/lot-num-records/?load-add-modal=True">
-                        <button id="addLotNumButton" class="btn btn-primary topButton">
-                            Add New Lot
-                        </button>
-                    </a>
-                {% endif %}
+                <button id="addLotNumButton" class="btn btn-primary topButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal">
+                    Add New Lot
+                </button>
                 <button id="create_list" class="topButton" style="display:none;">Create Count List</button>
                 <button id="batchDeleteButton" class="btn btn-outline-danger topButton" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
                     Delete Lots
@@ -97,7 +89,7 @@
                                     <li><a class="dropdown-item blendLabelLink" data-encoded-item-code="{{ item.encoded_item_code }}" data-lot-number="{{ item.lot_number }}" data-lot-quantity={{ item.lot_quantity }}>Create Small Tote Label</a></li>
                                     {% if user.is_staff %}
                                         <li><hr class="dropdown-divider"></li>
-                                        <li><a href="/core/lot-num-records/?edit-yes-no=yes&lot-id={{ item.id }}" class="dropdown-item">Edit Lot</a></li>
+                                        <li><a data-lot-id={{ item.id }} class="dropdown-item editLotButton" data-bs-toggle="modal" data-bs-target="#editLotNumModal">Edit Lot</a></li>
                                         <li><a dataItemID="{{ item.id }}" class="duplicateBtn dropdown-item" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"Y-m-d" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
                                             Duplicate Lot
                                         </a></li>
