--- a/app/core/templates/core/truckrailmaterialschedule.html
+++ b/app/core/templates/core/truckrailmaterialschedule.html
@@ -12,14 +12,14 @@
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
-                    <th scope="col" class='text-center'>Required Date</th>
-                    <th scope="col" class='text-center'>Vendor No.</th>
+                    <th scope="col" class='text-center'>Req. Date</th>
+                    <th scope="col" class='text-center'>Vend No.</th>
                     <th scope="col" class='text-center'>Item Code</th>
                     <th scope="col" class='text-center'>Item Description</th>
                     <th scope="col" class='text-center'>PO Number</th>
-                    <th scope="col" class='text-center'>Quantity Ordered</th>
-                    <th scope="col" class='text-center'>Unit of Measure</th>
-                    <th scope="col" class='text-center'>Comment Text</th>
+                    <th scope="col" class='text-center'>Qty</th>
+                    <th scope="col" class='text-center'>UOM</th>
+                    <th scope="col" class='text-center'>Comment</th>
                     <th scope="col" class='text-center'>Confirm To</th>
                     <th scope="col" class='text-center'>Tank</th>
                 </tr>
@@ -35,7 +35,7 @@
                     <td class='text-center'>{{ item.unitofmeasure }}</td>
                     <td class='text-center'>{{ item.commenttext }}</td>
                     <td class='text-center'>{{ item.confirmto }}</td>
-                    <td class="text-center {{ item.space_warning_level }}">{{ item.tank }}</td>
+                    <td class="text-center {{ item.space_warning_level }}"><strong>{{ item.tank }}</strong></td>
                 </tr>
             {% endfor %}
         </table>
