Enable editing of itemlocations.

--- a/app/core/templates/core/modals/edit-foam-factor-modal.html
+++ b/app/core/templates/core/modals/edit-foam-factor-modal.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title" id="editFoamFactorModalLabel"><b>Edit Lot Number</b></h4>
+            <h4 class="modal-title" id="editFoamFactorModalLabel"><b>Edit Foam Factor</b></h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="editFoamFactorFormContainer">
