--- a/app/core/templates/core/itemlocations.html
+++ b/app/core/templates/core/itemlocations.html
@@ -1,16 +1,34 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block scripts %}
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/itemLocations.css' %}">
+    <script type="module" src="{% static 'core/js/pageModules/itemLocations.js' %}"></script>
+{% endblock scripts %}
 {% block title %}<title>Item Locations</title>{% endblock %}
 
-{% block scripts %}
-    <link rel="stylesheet" type="text/css" href="{% static 'core/css/allItemLocations.css' %}">
-{% endblock scripts %}
-    
-
 {% block content %}
-    <h1>All Chemical Locations</h1>
-    <a href="/core/display-item-locations?updateLocations=Tru">Update items using CiItem</a>
+    {% include 'core/modals/edit-item-location-modal.html' %}
+
+    <h1>All Item Locations</h1>
+    <div class="row mb-3">
+        <div class="col-md-6">
+            <div class="form-group">
+                <button id="addMissingItemLocationsBtn" class="btn btn-primary">
+                    <i class="fas fa-plus-circle"></i> Add Missing Item Locations
+                </button>
+            </div>
+        </div>
+        <div class="col-md-6 text-end">
+            <div class="form-group">
+                <select id="itemTypeFilter" class="form-select">
+                    <option value="">All Item Types</option>
+                    <option value="blend">Blends</option>
+                    <option value="blendcomponent">BlendComponents</option>
+                    <option value="warehouse">Warehouse</option>
+                </select>
+            </div>
+        </div>
+    </div>
     <br>
     <tr id="itemCodeRow">
         <td>
@@ -29,6 +47,7 @@
                         <th scope="col">Area</th>
                         <th scope="col">Location</th>
                         <th scope="col">Qty On Hand</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 {% for item in item_locations %}
@@ -38,6 +57,11 @@
                         <td>{{ item.zone }}</td>
                         <td>{{ item.bin }}</td>
                         <td>{{ item.qtyonhand|floatformat:2 }} {{ item.standard_uom }}</td>
+                        <td>
+                            <button data-item-location-id="{{ item.id }}" type="button" class="btn btn-outline-primary editLocationButton" data-bs-toggle="modal" data-bs-target="#editItemLocationModal">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                        </td>
                     </tr>
                 {% endfor %}
             </table>
