Fix the switch button

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -64,7 +64,8 @@
         <li><a class="dropdown-item" href="/core/display-loop-status">Refresh Status</a></li>
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
         <li><a class="dropdown-item" href="/core/foam-factors">Foam Factors</a></li>
-        <li><a class="dropdown-item" href="/core/display-item-locations">Item Locations</a></li>
+        <li><a class="dropdown-item" href="/core/display-item-locations?item-type=blendcomponent">Component Item Locations</a></li>
+        <li><a class="dropdown-item" href="/core/display-item-locations?item-type=blend">Blend Item Locations</a></li>
         <li><a class="dropdown-item" href="/core/display-all-GHS-pictograms">Edit GHS Pictograms</a></li>
         <li><a class="dropdown-item" href="/core/attendance-report">Attendance Records</a></li>
     </ul>
