--- a/app/core/templates/core/modals/edit-item-location-modal.html
+++ b/app/core/templates/core/modals/edit-item-location-modal.html
@@ -9,21 +9,18 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="editItemLocationFormContainer">
-            {% if submitted %}
-            {% else %}
-                <form action="" method=POST>
-                    {% csrf_token %}
-                    <table id="ItemLocationformtable">
-                        {{ edit_item_location_form }}
-                    </table>
-                    <div class="modal-footer">
-                        <a href='/core/item-locations'>
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        </a>
-                        <button type="submit" name="editItemLocation" action="" value="Save Changes" class="btn btn-primary">Save Changes</button>
-                    </div>
-                </form>
-            {% endif %}
+            <form id="editItemLocationForm" method=POST>
+                {% csrf_token %}
+                <table id="ItemLocationformtable">
+                    {{ edit_item_location_form }}
+                </table>
+                <div class="modal-footer">
+                    <a href='/core/item-locations'>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </a>
+                    <button type="submit" name="editItemLocation" value="Save Changes" class="btn btn-primary">Save Changes</button>
+                </div>
+            </form>
         </div>
     </div>
     </div>
