--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -194,6 +194,10 @@ li::before, li::after {
     content: none;
 }
 
+.tbl-cell-sage_converted_quantity {
+    display: none;
+}
+
 @media only screen and (max-width: 600px) {
     table {
         width: 100%;
