Security enhancements: token deletion of superuser accounts.

--- a/app/core/static/core/css/missingauditgroups.css
+++ b/app/core/static/core/css/missingauditgroups.css
@@ -12,6 +12,13 @@ input[name*='item_description'] {
     border: none;
 }
 
+input[name*='counting_unit'] {
+    width: auto;
+    height: 24px;
+    background-color: transparent;
+    border: none;
+}
+
 input[name*='expected_quantity'] {
     width: 84px;
     height: 24px;
