--- a/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
+++ b/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
@@ -58,6 +58,7 @@
                     <th scope="col" class='text-center'>Code</th>
                     <th scope="col" class='text-center'>Last Count</th>
                     <th scope="col" class='text-center'>Audit Group</th>
+                    <th scope="col" class='text-center'>Count Unit</th>
                     <th scope="col" class='text-center'></th>
                 </tr>
             </thead>
@@ -78,6 +79,7 @@
                     {% comment %} <td>{{ item.last_count.1|floatformat:0 }} - {{ item.last_count.0|date:"m/d/y" }} </td> {% endcomment %}
                     <td>{{ item.last_count.0|date:"m/d/y" }} </td>
                     <td>{{ item.audit_group }}</td>
+                    <td>{{ item.counting_unit }}</td>
                     <td><i class="fa fa-pencil editIcon" data-itemID="{{ item.id }}" data-itemCode="{{ item.item_code }}" data-auditGroup="{{ item.audit_group }}"></i></td>
                 </tr>                
             {% endfor %}
