Update KPK app links and API fetch port: Changed HTTP links to HTTPS and updated port from 1337 to 1338

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <a href="http://192.168.178.169:1337" id="kpk-app-link" class="b-example-divider-link">
+      <a href="https://192.168.178.169:1338" id="kpk-app-link" class="b-example-divider-link">
         <div class="b-example-divider">
           <div class="binary-stream" aria-hidden="true"></div>
           <span class="divider-text">Open KPK App</span>
@@ -144,7 +144,7 @@
                 Open Tanks and Totes Sheet
                 <svg class="bi"><use xlink:href="#chevron-right"/></svg>
               </a>
-              <a href="http://192.168.178.169:1337/core/tank-levels/" class="icon-link">
+              <a href="https://192.168.178.169:1338/core/tank-levels/" class="icon-link">
                 Open Tank Radar Levels Page
                 <svg class="bi"><use xlink:href="#chevron-right"/></svg>
               </a>
@@ -349,7 +349,7 @@
         };
 
         // Initialize
-        fetch(`${window.location.protocol}//${window.location.hostname}:1337/core/get-BOM-fields/?restriction=`, {
+        fetch(`${window.location.protocol}//${window.location.hostname}:1338/core/get-BOM-fields/?restriction=`, {
             method: 'GET',
             credentials: 'include',
             headers: { 'Accept': 'application/json' }
