--- a/app/nav3d/templates/nav3d/interface.html
+++ b/app/nav3d/templates/nav3d/interface.html
@@ -110,8 +110,8 @@
 
     .kpk-loader {
         position: relative;
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -122,16 +122,57 @@
         height: 120px;
         position: absolute;
         animation: pulse 2s ease-in-out infinite;
+        z-index: 2;
     }
 
     .loading-ring {
         position: absolute;
-        width: 180px;
-        height: 180px;
-        border: 4px solid transparent;
-        border-top: 4px solid #0d6efd;
-        border-right: 4px solid #ffdd22;
+        width: 240px;
+        height: 240px;
         border-radius: 50%;
+        border: none;
+        z-index: 1;
+    }
+
+    .loading-ring::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 5px solid transparent;
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+        box-sizing: border-box;
+        animation: spin 2s linear infinite;
+    }
+
+    .loading-ring::before {
+        content: '';
+        position: absolute;
+        top: -5px;
+        left: -5px;
+        width: calc(100% + 10px);
+        height: calc(100% + 10px);
+        border-radius: 50%;
+        background: conic-gradient(
+            from 180deg,
+            rgba(13, 110, 253, 0) 0deg,
+            rgba(13, 110, 253, 1) 32deg,
+            rgba(255, 221, 34, 0.8) 72deg,
+            transparent 72deg
+        );
+        mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+        -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+        mask-composite: xor;
+        -webkit-mask-composite: xor;
+        mask-composite: exclude;
+        padding: 5px;
+        box-sizing: border-box;
         animation: spin 2s linear infinite;
     }
 
