Add container quantity tracking to countlist.

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -204,3 +204,11 @@ li::before, li::after {
         font-size: 8px;
     }
 }
+
+h5 {
+    display: flex;
+}
+
+.containerQuantity {
+    padding-left: 15px;
+}
