--- a/app/core/templates/core/loopstatus.html
+++ b/app/core/templates/core/loopstatus.html
@@ -9,6 +9,9 @@
 {% block content %}
     <div class="text-center">
         <h1>Loop Status</h1>
+        <button id="restartLoopBtn" class="btn btn-warning mb-3">
+            <i class="fas fa-sync-alt mr-2"></i> Restart Data Looper
+        </button>
     </div>
     <br>
     <div id="loopStatusTable" class="table-responsive-sm">
