--- a/app/core/templates/core/reports/excessblends.html
+++ b/app/core/templates/core/reports/excessblends.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Excess Blends Report{% endblock %}
+{% block title %}<title>Excess Blends Report</title>{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
